app/static/css/styles.css
div.dataTables_wrapper {
    width: 100%;
    margin: 0 auto;
    padding: 0;
}

body {
    overflow-x: hidden;
}

.bg-hhu-gradient {
  background-image: linear-gradient(to right, rgba(0,106,179,1) 0%, rgba(0,54,99,1) 100%);
}

.text-hhu-gradient {
    background-color: #006AB3FF;
    background-image: linear-gradient(to right, rgba(0, 106, 179, 1) 0%, rgba(0, 54, 99, 1) 100%) !important;
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.login-form {
  opacity: 0 !important;
  transform: translateY(50px) !important;
  transition: opacity 1s ease, transform 1s ease !important;
}

.login-form.show {
  opacity: 1 !important;
  transform: none !important;
}

.dash-content {
  opacity: 0;
  transform: translateX(100%) !important;
  transition: opacity 0.5s ease, transform 0.5s ease !important;
}

.dash-content.show {
  opacity: 1;
  transform: translateX(0) !important;
}

.navbar-brand-img{
    min-height: 5em;
    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2))!important;
}

.nav-link.active .icon{
    background-image: linear-gradient(to right, rgba(0, 106, 179, 1) 0%, rgba(0, 54, 99, 1) 100%) !important;
}

